<?xml version="1.0"?>
<package format="2">
  <name>waypoint_server</name>
  <version>0.0.0</version>
  <description>The waypoint_server package</description>

  <maintainer email="ms.kataoka@gmail.com">Masaya Kataoka</maintainer>

  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rostate_machine</build_depend>
  <build_depend>usv_navigation_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rostate_machine</build_export_depend>
  <build_export_depend>usv_navigation_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>tf2_geometry_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rostate_machine</exec_depend>
  <exec_depend>usv_navigation_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>rosdoc_lite</exec_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
